2012-12-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwfile.tap: Added -stdio tests for most file formats.
	This tests I/O using an already-opened file handle passed via the
	ImageInfo file member.  Formats using the Ghostscript delegate are
	not working right yet.

2012-12-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwfile.c (main): Added a '-stdio' option to test
	reading/writing files using file handles opened by the API user.

	* magick/blob.c (CloseBlob): It should be possible to invoke
	CloseBlob() multiple times, including blobs set to "exempt".
	There were some issues when passing in file descriptors.

2012-12-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/api/api.rst: Add another example Core C API example program.

	* magick/blob.c (OpenBlob): Restore file position, rather than
	rewind, after reading header bytes.

	* magick/image.c (SetImageInfo): Restore file position after
	reading header bytes.  Resolves SourceForge issue 3597486
	"ReadImage not working with file descriptors".

2012-12-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick: WIN64 (64-bit Windows) installer improvements to
	bring up to par with 32-bit installer.

2012-12-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* VisualMagick: WIN64 (64-bit Windows) is supported now.

2012-12-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c: Eliminate support for experimental
	MAGICK_MMAP_WRITE, which never quite worked correctly and did not
	provide performance benefits.

2012-12-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/blob.c (FileToBlob): Rewrite to be based on stdio.

2012-12-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/magick_types.h.in: Changes to try to work better with the
	Windows WIN64 API.

2012-12-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageColorRegion): The provided color should