@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020121227"
-#define public MagickPackageReleaseDate "snapshot-20121227"
+#define public MagickPackageVersionAddendum ".020121228"
+#define public MagickPackageReleaseDate "snapshot-20121228"
